# shopauth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.rst  RELEASE.rst  changelogger.py  pyproject.toml  setup.cfg  setup.py
shopauth/: __init__.py  cookieserializer.py  interfaces.py  scopes.py  util.py
shopauth/storage/: sqlalchemy_shim.py
shopauth/web/: pyramid_shim.py
src/shopauth/: __init__.py  interfaces.py  webhook_api.py  webhook_endpoint.py
